<resources>
    <string name="app_name">Yalla Dardasha</string>
    //custom
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_num">enter number</string>
    <string name="phoneTerms">Accept terms conditions and policy.</string>
    <string name="get_code">Get Code</string>
    <string name="have_an_account_sign_in"> <u>Have an account? Sign in.</u></string>
    <string name="enter_received_code">Enter received Code:</string>
    <string name="confirm">Confirm</string>
    <string name="club_house">Club House</string>
    <string name="we_hope_you_enjoy_the_experience">We hope you enjoy the experience.</string>
    <string name="user_information">User Info.</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="bio">Bio</string>
    <string name="submit">Submit</string>
    <string name="create_new_room">Create New Room</string>
    <string name="what_happens_in_your_mind">what happens In your mind?</string>
    <string name="cancel">Cancel</string>
    <string name="about_app">Our application is classified within the social networking applications, and this is the initial version that contains only the basic objectives of its construction, which are voice communication between users. It was built in 2021 to be a graduation project for:</string>
</resources>