<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="openCreateUser"
        tools:context=".ui.phone_verifying.createUser.CreateUserActivity">

        <ImageView
            android:id="@+id/createUser_backImageview"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/arrow_back"
            app:tint="@color/color_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/user_information"
            android:textColor="@color/color_1"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/createUser_backImageview"
            app:layout_constraintStart_toEndOf="@+id/createUser_backImageview"
            app:layout_constraintTop_toTopOf="@+id/createUser_backImageview" />


        <LinearLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50sp"
            android:background="@drawable/white_backgrount"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="50dp"
            android:paddingEnd="25dp"
            android:paddingBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/color_1"
                android:text="Your Data !"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/enterphonetext_bg">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createUser_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:hint="@string/full_name"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toTopOf="@+id/view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createUser_user_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:hint="@string/user_name"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toTopOf="@+id/view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/createNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:transitionName="openHome"
            android:background="@drawable/button_bg"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ProgressBar
            android:id="@+id/waitToCreateNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/createNewUser"
            app:layout_constraintStart_toStartOf="@+id/createNewUser"
            app:layout_constraintTop_toBottomOf="@+id/createNewUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>